fixed the header, working on mobile friendliness

--- a/src/index.css
+++ b/src/index.css
@@ -169,37 +169,56 @@ body {
   color: #fff;
 }
 
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*
   ========================================
   smartphones, iPhone, portrait 480x320 phones
   ========================================
 */
 
-.map {
-  width: 80vw;
-  height: 70vh;
-  margin-left: 10vw;
-  margin-bottom: 5vw;
-}
+@media only screen and (max-width: 400px) {
+  .header {
+    height: 25%;
+  }
 
-.userListing {
-  width: 20vw;
-  /* height: 20vh; */
-  /* margin-left: 5vw;
-  margin-right: 5vw; */
-  /* display: inline-block; */
-  margin: 0 auto;
-  vertical-align: top;
-  margin-bottom: 2vw;
-  border: 2px solid blue;
-}
+  header .btn-logo {
+    font-size: 20px;
+    margin: 0 auto;
+    padding-top: 0;
+    line-height: 25px;
+  }
 
-.userListing .userList-userName,
-.userList-location {
-  display: inline;
-  overflow: auto;
-}
+  .btn-login {
+    margin-right: 12px;
+  }
 
+  .map {
+    margin-bottom: 15px;
+    width: 100vw;
+  }
+
+  .userListing {
+    height: 10vh;
+    margin-bottom: 2vh;
+    word-spacing: 2px;
+  }
+
+  .userList-userName {
+    margin-right: 2px;
+  }
+}
 /*
   ========================================
   Header
@@ -813,7 +832,7 @@ h1 {
   portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones
   ========================================
 */
-@media (min-width: 700px) {
+@media only screen and (min-width: 401px) and (max-width: 960px) {
   .map {
     width: 50vw;
     height: 50vh;
@@ -838,40 +857,10 @@ h1 {
 
 /*
   ========================================
-  tablet, landscape iPad, lo-res laptops ands desktops
-  ========================================
-*/
-/* @media (min-width: 1000px) {
-  .map {
-    width: 80vw;
-    height: 80vh;
-    margin-right: 10vw;
-    margin-left: 10vw;
-    display: table-cell;
-    float: left;
-  }
-
-  .userListing {
-    width: 15%;
-    height: 100%;
-    display: table-cell;
-    vertical-align: top;
-    display: inline-block;
-    border: 2px solid black;
-  }
-
-  .userListing .userList-userName,
-  .userList-location {
-    display: inline;
-  }
-} */
-
-/*
-  ========================================
   hi-res laptops and desktops
   ========================================
 */
-@media (min-width: 1000px) {
+@media only screen and (min-width: 961px) {
   .map {
     width: 55vw;
     height: 70vh;
